Bug 361813 - [WACOM] Wacom CTL-460/Intuos Pro Small+Krita 2.9.11: Stylus Side Buttons Not Working with Click-Based Shortcuts
Summary: [WACOM] Wacom CTL-460/Intuos Pro Small+Krita 2.9.11: Stylus Side Buttons Not ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 2.9.11
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-15 13:51 UTC by nubbet
Modified: 2016-08-16 06:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nubbet 2016-04-15 13:51:15 UTC
I am using a Wacom Bamboo Pen (CTL-460). Everything seems to be working fine, except two, personally major, issues.

I generally assign the Color Picker (Ctrl in Krita) to the lower side button, and Drag Brush Size (Shift in Krita) to the upper side button.

When I use these function on the keyboard (press and hold the shift key and drag with the stylus, or press and hold the ctrl key and tap on a color), they work fine and dandy.

When these functions are mapped to the Wacom stylus, however, they cease to function altogether.

I'm running Windows 7 64-bit (Home).

The issue apparently seems to effect new intuos pro models as well.

 This issue seems to carry over to color picker as well.

Reproducible: Always

Steps to Reproduce:
1. In Wacom Preferences, create a new "Modifier" for a Pen Button shortcut
2. Select "Shift" only (Or shift+click, neither seem to work)
3. Shift is the shortcut for being able to drag the brush size by default in Krita 2.9.11. One must press and hold shift, then click and drag.
4. Assigning shift to a Pen Button does not produce the desired effect, it seems.

Actual Results:  
The brush drag resize function fails to initiate.

Expected Results:  
Initiate the brush drag function (shift) in Krita, and then drag the brush size by pressing the pen tip to the wacom surface and dragging.

I have tested this across different versions of Krita. It seems to be prevalent across the versions I have tried.

Other painting/art software I have tested does not exhibit this issue (Manga Studio, Mischief.)
Comment 1 Doc 2016-04-21 19:38:28 UTC
I've had an issue I believe to be directly related to this with the latest build of the 3.0 Alpha (git f38b47e) on windows 8.1. 

I assigned one of my stylus' side buttons to the middle mouse button and one to right click, but at some point the middle mouse button map stopped working (or at least Krita stopped responding to it). 

I can't pin down what events cause this exactly, but I was actually able to fix the issue by restarting Krita and/or loading saved files (which worked the first time). At one point I managed to get the stylus buttons to respond again and I tried to change the Wacom mapping for the stylus, but Krita seemed to ignore my changes and stuck with the previous mapping. After a series of Krita restarts, loading saved files and finally starting a new project Krita responded to the new Wacom stylus button map.
Comment 2 Dmitry Kazakov 2016-05-16 18:05:27 UTC
Git commit 5599661788d4a0bbc4f4fe0b9b5ff27959705d55 by Dmitry Kazakov.
Committed on 16/05/2016 at 17:54.
Pushed by dkazakov into branch 'master'.

Let the user assign Ctrl, Shift or Alt keys to the stylus button

This patch allows the user to assign any modifier key to the stylus
button and Krita will not "eat" these event. Please take care, becasue
all the non-modifier assignments, e.g. Whitespace key, will still be eaten.
Ref T2419

M  +8    -0    libs/ui/input/kis_tablet_debugger.cpp
M  +3    -0    libs/ui/input/kis_tablet_debugger.h
M  +29   -3    libs/ui/input/wintab/kis_tablet_support_win.cpp
M  +5    -0    libs/ui/kis_config.cc
M  +2    -0    libs/ui/kis_config.h

http://commits.kde.org/krita/5599661788d4a0bbc4f4fe0b9b5ff27959705d55
Comment 3 Jelena 2016-08-16 06:41:32 UTC
It's working now. Thanks!