Let the user assign Ctrl, Shift or Alt keys to the stylus button

This patch allows the user to assign any modifier key to the stylus
button and Krita will not "eat" these event. Please take care, becasue
all the non-modifier assignments, e.g. Whitespace key, will still be eaten.

BUG:361813
Ref T2419